<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25px"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.yurifws.teste.activity.CadastroUsuarioActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:paddingLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="Email"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_backgroud"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:id="@+id/edCadEmail"
                            android:inputType="textEmailAddress"
                            android:hint="Email"/>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:paddingLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/strCadSenha"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_backgroud"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            android:id="@+id/edCadSenha"
                            android:inputType="textPassword"
                            android:hint="@string/strCadSenha"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorText"
                            android:paddingLeft="5dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/strCadConfirmaSenha"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_backgroud"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:id="@+id/edCadConfirmarSenha"
                            android:inputType="textPassword"
                            android:hint="@string/strCadConfirmaSenha"/>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_background_button"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/colorTextButton"
                            android:id="@+id/btnCadastrar"
                            android:text="@string/strCadCadastrar" />
                </LinearLayout>
        </ScrollView>



</LinearLayout>
